...
                    .environmentObject(appState)
                    .tag(0)
                
                ProtocolsView()
                    .tag(1)
                
                ScannerView()
                    .tag(2)
                
                AuditsView()
                    .tag(3)
                
                PersonnelView()
...
